--- a/LuasTimes/TODO
+++ b/LuasTimes/TODO
@@ -1,3 +1,5 @@
 Animated refresh icon.
 Hook up footer to bottom of screen.
 Take out nearest geo, possibly replace with action item.
+
+Skip predex on CI
