Update deprecated admob library to firebase Ads

--- a/LuasTimes/src/main/res/values/strings.xml
+++ b/LuasTimes/src/main/res/values/strings.xml
@@ -63,4 +63,6 @@
     <string name="incorrect_times">Incorrect times?</string>
     <string name="missing_times">Missing times?</string>
 
+    <string name="ad_unit_id">ca-app-pub-2471497992355489/6221387259</string>
+
 </resources>
